adding a dummy form

--- a/reviews/templates/reviews/review.html
+++ b/reviews/templates/reviews/review.html
@@ -6,7 +6,11 @@
     <title>Your Review</title>
   </head>
   <body>
-     
-	<script src="index.js"></script>
+     <form>
+        <label for="name">Your name</label>
+        <input id="username" name="username" type="text" />
+        <button>Send</button>
+        
+     </form>
   </body>
 </html>
