--- a/reviews/templates/reviews/review.html
+++ b/reviews/templates/reviews/review.html
@@ -6,10 +6,10 @@
     <title>Your Review</title>
   </head>
   <body>
-     <form>
+     <form method="POST">
         <label for="name">Your name</label>
         <input id="username" name="username" type="text" />
-        <button>Send</button>
+        <button type="submit">Send</button>
         
      </form>
   </body>
